2013-10-04  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	Backport from mainline.

	PR target/58460
	* config/aarch64/aarch64.md (*add_<shift>_<mode>)
	(*add_<shift>_si_uxtw,*add_mul_imm_<mode>)
	(*sub_<shift>_<mode>)
	(*sub_<shift>_si_uxtw,*sub_mul_imm_<mode>, *sub_mul_imm_si_uxtw):
	Remove k constraint.

2013-10-02  John David Anglin  <danglin@gcc.gnu.org>

	* config.gcc (hppa*64*-*-linux*): Don't add pa/t-linux to tmake_file.

2013-10-01  Jakub Jelinek  <jakub@redhat.com>
	    Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	PR target/58574
	* config/s390/s390.c (s390_chunkify_start): Handle tablejump_p first,
	continue when done, for other jumps look through PARALLEL
	unconditionally.

2013-09-30  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/58564
	* fold-const.c (fold_ternary_loc): For A < 0 : <sign bit of A> : 0
	optimization, punt if sign_bit_p looked through any zero extension.

2013-09-27  Paulo Matos  <pmatos@broadcom.com>

	Backport from mainline.

	PR middle-end/58463
	2013-03-27  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/56716
	* tree-ssa-structalias.c (perform_var_substitution): Adjust
	dumping for ref nodes.

2013-09-27  Paulo Matos  <pmatos@broadcom.com>

	Backport from mainline.

	2013-09-27  Paulo Matos  <pmatos@broadcom.com>
	PR middle-end/58463
	* gcc.dg/pr58463.c: New test.

2013-09-23  Eric Botcazou  <ebotcazou@adacore.com>

	* tree-ssa-ccp.c (insert_clobber_before_stack_restore): Recurse on copy
	assignment statements.

2013-09-23  Alan Modra  <amodra@gmail.com>

	PR target/58330
	* config/rs6000/rs6000.md (bswapdi2_64bit): Disable for volatile mems.

2013-09-23  Alan Modra  <amodra@gmail.com>

	* config/rs6000/predicates.md (add_cint_operand): New.
	(reg_or_add_cint_operand, small_toc_ref): Use add_cint_operand.
	* config/rs6000/rs6000.md (largetoc_high_plus): Restrict offset
	using add_cint_operand.
	(largetoc_high_plus_aix): Likewise.
	* config/rs6000/rs6000.c (toc_relative_expr_p): Use add_cint_operand.
