@@ -9857,8 +9857,8 @@
 ; Non-constrained transaction begin
 
 (define_expand "tbegin"
-  [(match_operand:SI 0 "register_operand" "=d")
-   (match_operand:BLK 1 "memory_operand"  "=Q")]
+  [(match_operand:SI 0 "register_operand" "")
+   (match_operand:BLK 1 "memory_operand" "")]
   "TARGET_HTM"
 {
   s390_expand_tbegin (operands[0], operands[1], NULL_RTX, true);
@@ -9866,8 +9866,8 @@
 })
 
 (define_expand "tbegin_nofloat"
-  [(match_operand:SI 0 "register_operand" "=d")
-   (match_operand:BLK 1 "memory_operand"  "=Q")]
+  [(match_operand:SI 0 "register_operand" "")
+   (match_operand:BLK 1 "memory_operand" "")]
   "TARGET_HTM"
 {
   s390_expand_tbegin (operands[0], operands[1], NULL_RTX, false);
@@ -9875,9 +9875,9 @@
 })
 
 (define_expand "tbegin_retry"
-  [(match_operand:SI 0 "register_operand" "=d")
-   (match_operand:BLK 1 "memory_operand"  "=Q")
-   (match_operand 2 "const_int_operand")]
+  [(match_operand:SI 0 "register_operand" "")
+   (match_operand:BLK 1 "memory_operand" "")
+   (match_operand:SI 2 "general_operand" "")]
   "TARGET_HTM"
 {
   s390_expand_tbegin (operands[0], operands[1], operands[2], true);
@@ -9885,9 +9885,9 @@
 })
 
 (define_expand "tbegin_retry_nofloat"
-  [(match_operand:SI 0 "register_operand" "=d")
-   (match_operand:BLK 1 "memory_operand"  "=Q")
-   (match_operand 2 "const_int_operand")]
+  [(match_operand:SI 0 "register_operand" "")
+   (match_operand:BLK 1 "memory_operand" "")
+   (match_operand:SI 2 "general_operand" "")]
   "TARGET_HTM"
 {
   s390_expand_tbegin (operands[0], operands[1], operands[2], false);
@@ -9954,7 +9954,7 @@
 (define_expand "tend"
   [(set (reg:CCRAW CC_REGNUM)
 	(unspec_volatile:CCRAW [(const_int 0)] UNSPECV_TEND))
-   (set (match_operand:SI 0 "register_operand" "=d")
+   (set (match_operand:SI 0 "register_operand" "")
 	(unspec:SI [(reg:CCRAW CC_REGNUM)] UNSPEC_CC_TO_INT))]
   "TARGET_HTM"
   "")
@@ -9969,7 +9969,7 @@
 ; Transaction abort
 
 (define_expand "tabort"
-  [(unspec_volatile [(match_operand 0 "shift_count_or_setmem_operand" "")]
+  [(unspec_volatile [(match_operand:SI 0 "shift_count_or_setmem_operand" "")]
 		    UNSPECV_TABORT)]
   "TARGET_HTM && operands != NULL"
 {
@@ -9984,7 +9984,7 @@
 })
 
 (define_insn "*tabort_1"
-  [(unspec_volatile [(match_operand 0 "shift_count_or_setmem_operand" "")]
+  [(unspec_volatile [(match_operand:SI 0 "shift_count_or_setmem_operand" "Y")]
 		    UNSPECV_TABORT)]
   "TARGET_HTM && operands != NULL"
   "tabort\t%Y0"
@@ -10013,7 +10013,7 @@
 
 (define_expand "tx_assist"
   [(set (match_dup 1) (const_int 0))
-   (unspec_volatile [(match_operand:SI 0 "register_operand" "d")
+   (unspec_volatile [(match_operand:SI 0 "register_operand" "")
 		     (match_dup 1)
 		     (const_int 1)]
 		    UNSPECV_PPA)]
